--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Willy Wonkas - Personal Portfolio Website Template" />
+    <meta name="description" content="Marshall Pokus - Personal Portfolio" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
-	<meta name="author" content="willy wonka" />
-    <title>Willy Wonkas - Personal Portfolio Website Template</title>
+	<meta name="author" content="Marshall Poku" />
+    <title>Marshall Pokus - Personal Portfolio </title>
   <!--favicon-img--> 
    <link rel="icon" type="image/png" href="images/favicon.png">
    <!--favicon-img-->
@@ -37,7 +37,7 @@
         <!--Navigator-fullscreen-->
         <div id="navigation-content">
             <div class="logo">
-                <img src="images/willy wonka logo.png" alt="logo">
+                <img src="images/Marshall Pokus logo.png" alt="logo">
             </div>
             <div class="navigation-close">
                 <span class="close-first"></span>
@@ -77,10 +77,10 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">Arlo </span>Brown</div>
+                <div class="firstline"><span class="color">Marshall </span>Poku</div>
                 <div class="secondline">
                 I'm a
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Blogger.", " Freelancer." ]'></span>
+            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Graphic Designer.", " Data Analyst.", " Social Media Manager., Online Tutor" ]'></span>
             <span class="slash">|</span>
         </div>
                     <div class="contact">
@@ -140,11 +140,11 @@
             <div class="about-first-paragraph wow">
             <!--about description-->
                <span class="about-first-line">
-                    I'm creative 
+                    I'm diverse in many areas, 
                     <span class="color">web developer</span>
-                     based in New York , USA </span>
+                     based in Toronto, Canada </span>
                      <br>
-               <span class="about-second-line"> With 20 years of experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
+               <span class="about-second-line"> I possess a diverse skill, enabling me to create visually appealing designs, extract valuable insights from data, engage and grow online communities, and deliver effective virtual lessons. To make your project a success.</span>
                <div class="cv">
                 <a href="#"><button>Download <span class="colors">CV</span></button></a>
             </div>
@@ -200,8 +200,8 @@
                                <img src="images/coding.png" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <h2>Web Designing</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
+                                <h2>Graphic Designing</h2>
+                                <p> I showcase my passion for graphic designing, combining creativity and technical expertise to deliver visually stunning and impactful designs that capture the essence of each project.</p>
                                </div>
                            </div>
                            <div class="service-two service wow">
@@ -210,7 +210,7 @@
                                </div>
                                <div class="service-description">
                                 <h2>Social Media</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
+                                <p>Explore and discover how my expertise in social media management can help elevate your brand's online presence, engage your target audience, </p>
                                </div>
                            </div>
                            <div class="service-three service wow">
@@ -218,8 +218,8 @@
                                <img src="images/bulb.png" alt="service-three">
                             </div>
                             <div class="service-description">
-                                <h2>Creative Design</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
+                                <h2>Data Analysis</h2>
+                                <p>I showcase my ability to transform complex datasets into actionable insights, leveraging my expertise in statistical analysis, data visualization. </p>
                             </div>
                         </div>
                     </div>
