--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--mouse  follower-->
     <!--loader-->
         <div id="loader">
-            <span class="color">Arlo</span>Brown 
+            <span class="color">Marshall</span>Poku
         </div>
     <!--loader-end-->
     <!--link-screen-->
@@ -144,7 +144,7 @@
                     <span class="color">web developer</span>
                      based in Toronto, Canada </span>
                      <br>
-               <span class="about-second-line"> I possess a diverse skill, enabling me to create visually appealing designs, extract valuable insights from data, engage and grow online communities, and deliver effective virtual lessons. To make your project a success.</span>
+               <span class="about-second-line"> I possess diverse skills, enabling me to create visually appealing designs, extract valuable insights from data, engage and grow online communities, and deliver effective virtual lessons. To make your project a success.</span>
                <div class="cv">
                 <a href="#"><button>Download <span class="colors">CV</span></button></a>
             </div>
@@ -238,7 +238,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="html-progress wow">95%</div>
+                 <div class="html-progress wow">80%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -248,7 +248,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="js-progress wow">90%</div>
+                 <div class="js-progress wow">75%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -264,31 +264,31 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        PHP
+                        SQL
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="php-progress wow">87%</div>
+                 <div class="sql-progress wow">87%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        JQuery
+                        Business Intelligence
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="jquery-progress wow">94%</div>
+                 <div class="Business Intelligence-progress wow">81%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        SEO
+                        Creativity
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="seo-progress wow">84%</div>
+                 <div class="creativity-progress wow">84%</div>
                     </div>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
              <div class="footer-text">
-                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Marshall Poku
              </div>
             </div>
     <!--copyright-section-->
@@ -343,8 +343,7 @@
                      </div>
                      <div class="portfolio-text">
                          <h2>App Idea</h2>
-                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate 
-                             expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
+                         <p>I took on the challenge of building a user-friendly and feature-rich app for my website, leveraging my coding skills and passion for seamless user experiences to create a dynamic tool that enhances engagement and functionality for visitors. </p>
                          <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div>
                  </div>
@@ -354,8 +353,7 @@
                     </div>
                     <div class="portfolio-text">
                         <h2>Web Designing</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id cumque placeat minima ad laudantium suscipit
-                             voluptatem ducimus. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
+                        <p>I eagerly embarked on the task of designing a captivating and visually appealing website for my brand, pouring my creativity and attention to detail into every aspect to deliver an immersive online experience for peoples. </p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -366,8 +364,7 @@
                     </div>
                     <div class="portfolio-text">
                         <h2>UI Designing</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate expedita eius dignissimos
-                            .. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
+                        <p> I immersed myself in the world of UI design, channeling my passion for aesthetics and user-centric experiences to craft visually stunning interfaces within my portfolio, showcasing my ability to blend creativity, usability, and cutting-edge design principles. </p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -376,9 +373,8 @@
                         <img src="images/portfolio-fourth.jpg" alt="portfolio-fourth">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Wow Graphics</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
-                             expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
+                        <h2>E-Commerce</h2>
+                        <p>Analyzing e-commerence data  leveraging my analytical skills and deep understanding of key metrics to extract valuable insights, identify trends, and make data-driven recommendations that optimize business strategies and drive growth.</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -386,7 +382,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Marshall Poku
                 </div>
                </div>
        <!--copyright-section-->
