--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="firstline"><span class="color">Marshall </span>Poku</div>
                 <div class="secondline">
                 I'm a
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Graphic Designer.", " Data Analyst.", " Social Media Manager., Online Tutor" ]'></span>
+            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Graphic Designer.", " Data Analyst.", " Social Media Manager.", " Online Tutor." ]'></span>
             <span class="slash">|</span>
         </div>
                     <div class="contact">
@@ -342,7 +342,7 @@
                         <img src="images/portfolio-first.jpg" alt="portfolio-first">
                      </div>
                      <div class="portfolio-text">
-                         <h2>App Idea</h2>
+                         <h2>App Experience</h2>
                          <p>I took on the challenge of building a user-friendly and feature-rich app for my website, leveraging my coding skills and passion for seamless user experiences to create a dynamic tool that enhances engagement and functionality for visitors. </p>
                          <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                      </div>
@@ -363,8 +363,10 @@
                         <img src="images/portfolio-third.jpg" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
-                        <h2>UI Designing</h2>
-                        <p> I immersed myself in the world of UI design, channeling my passion for aesthetics and user-centric experiences to craft visually stunning interfaces within my portfolio, showcasing my ability to blend creativity, usability, and cutting-edge design principles. </p>
+                        <h2>Divvy Bike Case Study</h2>
+                        <p>In this case study, I performed many real-world tasks of a data analyst. I worked for a company, Cyclistic, and met different team members. In order to
+			    answer the key business questions, I followed the steps of the data analysis process: ask, prepare, process, analyze,
+                             share, and act. </p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -374,7 +376,7 @@
                     </div>
                     <div class="portfolio-text">
                         <h2>E-Commerce</h2>
-                        <p>Analyzing e-commerence data  leveraging my analytical skills and deep understanding of key metrics to extract valuable insights, identify trends, and make data-driven recommendations that optimize business strategies and drive growth.</p>
+                        <p>Analyzing e-commerence data I leveraging my analytical skills and deep understanding of key metrics to extract valuable insights, identify trends, and make data-driven recommendations that optimize business strategies and drive growth.</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -427,84 +429,82 @@
                      <a href="#">
                      <div class="img">
                         <img src="images/post-one.jpg" alt="blog-one">
-                        <div class="blog-date">8 May,20</div>
+                        <div class="blog-date">9 August,20</div>
                      </div>
                      <div class="blog-text">
-                         <h3>Harleys In Hawaai</h3>
-                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus alias dolore recusandae illum, corrupti quo 
-                             veniam saepe aliquid! Quis voluptates ratione consequuntur vel, perferendis cum provident? Magnam fugiat voluptas
-                              libero.</p>
+                         <h3>How My Effective Data Analysis Can Transform Your Business</h3>
+                         <p>In today's digital age, businesses are inundated with vast amounts of data. From customer information to sales figures, market trends to operational metrics, this wealth of data holds immense potential. 
+			     However, without proper analysis, data remains mere numbers and statistics. In this blog, we explore the transformative power of data analysis and how it can revolutionize businesses of all sizes.</p>
                      </div></a>
                  </div>      
                  <div class="blogs">
                     <a href="#">
                     <div class="img">
                         <img src="images/post-two.jpg" alt="blog-two">
-                        <div class="blog-date">16 Jan,20</div>
+                        <div class="blog-date">17 Apr,22</div>
                     </div>
                     <div class="blog-text">
-                        <h3>Key To Be Productive</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt maiores, 
-                            recusandae cupiditate ducimus a non tempora, architecto obcaecati eaque ipsum assumenda harum dolorum iusto tenetur
-                             eius eligendi dolor magnam sit!</p>
+                        <h3>Unlocking Productivity</h3>
+                        <p>Productivity has become a prized asset for individuals and businesses alike. The ability to maximize output while minimizing wasted time and effort is essential for success. 
+			   In this blog, we explore effective strategies and techniques to unlock productivity and unleash your true potential.</p>
                     </div></a>
                 </div>      
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
                         <img src="images/post-three.jpg" alt="blog-three">
-                        <div class="blog-date">30 Nov,19</div>
+                        <div class="blog-date">30 Oct,19</div>
                     </div>
                     <div class="blog-text">
-                        <h3>Caffeine Addict</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo nostrum impedit 
-                            ipsam perspiciatis ratione sapiente quasi optio reprehenderit, labore consequuntur suscipit cum quas.
-                             Officiis dolorem asperiores, ut necessitatibus quas doloremque?</p>
+                        <h3>Building a Strong Online Presence</h3>
+                        <p>Building a strong online presence is essential for professional success. It serves as a virtual introduction, establishing credibility, and opening doors to new opportunities. 
+			   I've explorec effective strategies and techniques to build a robust online presence that showcases my expertise, 
+			    enhances my visibility, and propels my professional growth.</p>
                     </div></a>
                 </div>
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
                         <img src="images/post-four.jpg" alt="blog-four">
-                        <div class="blog-date">6 Jul,19</div>
+                        <div class="blog-date">4 Jan,22</div>
                     </div>
                     <div class="blog-text">
-                        <h3>Web Development</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, veniam ratione quam vitae,
-                             quibusdam explicabo rem debitis velit ipsa repellat, impedit nulla fuga? Amet corporis praesentium quae.
-                              Sed, quibusdam necessitatibus.</p>
+                        <h3>Exploring SQL</h3>
+                        <p>SQL is a fundamental skill for anyone working with relational databases. By mastering SQL basics, retrieving and manipulating data, 
+			    understanding database design principles, harnessing advanced SQL techniques, and following best practices, I've become a proficient SQL user capable of extracting valuable insights from your data. 
+			     Embrace the power of SQL, and unlock new opportunities.</p>
                     </div></a>
                 </div>  
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
                         <img src="images/post-five.jpg" alt="blog-five">
-                        <div class="blog-date">1 Jun,19</div>
+                        <div class="blog-date">6 Mar,21</div>
                     </div>
                     <div class="blog-text">
-                        <h3>Work From Home</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sunt eum necessitatibus rem 
-                            dignissimos nulla mollitia cumque, provident officiis non vitae? Animi aut doloremque illum, soluta hic minus 
-                            sint explicabo..</p>
+                        <h3>Embracing Remote Work</h3>
+                        <p>Remote work has transformed the modern workplace, providing individuals with the freedom to work from anywhere and companies with the opportunity to tap into global talent.
+			    Whether you're a seasoned remote worker or transitioning to remote work for the first time, 
+			     it really explores the benefits, challenges, and strategies for embracing remote work and thriving in this evolving work landscape.</p>
                     </div></a>
                 </div>  
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
                         <img src="images/post-six.jpg" alt="blog-six">
-                        <div class="blog-date">28 Feb,19</div>
+                        <div class="blog-date">28 Feb,22</div>
                     </div>
                     <div class="blog-text">
                         <h3>Business Trip</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora dolorum fuga ratione, unde, 
-                            ex quaerat iste numquam nemo nihil nobis rem sint quia recusandae dignissimos quos ut rerum nam.</p>
+                        <p>Follow me as I attend insightful business meetings, forging meaningful connections with industry leaders, entrepreneurs, and potential partners. 
+			   Discover the strategies and techniques employed to navigate cultural differences and communicate effectively, leading to successful collaborations and promising business prospects.</p>
                     </div></a>
                 </div>        
             </div>
                <!--copyright-section You Can Remove After Downloading-->
                <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Marshall Poku
                 </div>
                </div>
        <!--copyright-section-->
@@ -572,21 +572,21 @@
                     <img src="./images/icon-name.png" class="icon" alt="name-icon">
                     <div class="contact-info-icon-text">
                         <h6>Name</h6>
-                        <p>Arlo Brown</p>
+                        <p>Marshall Poku</p>
                   </div>
                 </div>
                 <div class="contect-info-content-line">
                   <img src="./images/icon-location.png" class="icon" alt="location-icon">
                   <div class="contact-info-icon-text">
                       <h6>Location</h6>
-                      <p>New York, USA</p>
+                      <p>Toronto, Canada</p>
                 </div>
               </div>
               <div class="contect-info-content-line">
                   <img src="./images/icon-phone.png" class="icon" alt="phone-icon">
                   <div class="contact-info-icon-text">
                       <h6>Call</h6>
-                      <p>+9865376531</p>
+                      <p>+6479747843</p>
                 </div>
               </div>
               
@@ -594,7 +594,7 @@
                   <img src="./images/icon-email.png" class="icon" alt="email-icon">
                   <div class="contact-info-icon-text">
                       <h6>Email</h6>
-                      <p>Info@example.com</p>
+                      <p>Marshallpoku0@gmail.com</p>
                 </div>
               </div>
                 </div>
@@ -604,7 +604,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
                     <div class="footer">
                         <div class="footer-text">
-                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Marshall Pokus
                         </div>
                        </div>
                <!--copyright-section-->
