--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="Marshall Poku" />
     <title>Marshall Pokus - Personal Portfolio </title>
-  <!--favicon-img--> 
-   <link rel="icon" type="image/png" href="images/favicon.png">
-   <!--favicon-img-->
+  <!--Logo M-img--> 
+   <link rel="icon" type="image/png" href="images/Logo M.png">
+   <!--Logo M-img-->
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
     <!--main css file-->
