--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <div class="contact">
                 <a href="Mailto:#"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
                 <a href="Tel:#"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
+		</div>
         </div>
            <!--Header End-->
         <!--HomePage End-->
