--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
 		</div>
         </div>
 	</div>
+        <!--header image-->
+        <div class="header-image">
+        <img src="images/man.jpg" alt="logo">
+        </div>
+        <!--header image end-->
+    </div>
+           <!--Header End-->
         <!--HomePage End-->
         <!--Main-Section End-->
         <!--about-->
