--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!--Navigator-fullscreen-->
         <div id="navigation-content">
             <div class="logo">
-                <img src="images/Marshall Pokus logo.png" alt="logo">
+                <img src="images/Logo M.png" alt="logo">
             </div>
             <div class="navigation-close">
                 <span class="close-first"></span>
@@ -55,7 +55,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img src="images/willy wonka logo.png" alt="logo">
+            <img src="images/Logo M.png" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
@@ -151,7 +151,7 @@
             </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="-" alt="Your Image">
+                <img src="images/251830~1.JPG" alt="Your Image">
             </div>
             </div>
     
@@ -555,8 +555,8 @@
                         <input  id="name" type="text" placeholder="Name" class="input-name">
                         <input id="email" type="email" placeholder="Email"  class="input-name">
                     </div>
-                    <input type="text" id="subject" placeholder="subject" class="input-subject">
-                    <textarea id ="body" class="input-textarea" placeholder="message"></textarea>
+                    <input type="text" id="subject" placeholder="Subject" class="input-subject">
+                    <textarea id ="body" class="input-textarea" placeholder="Message"></textarea>
                     <button type="button" id ="submit" value="send">Submit</button>
                  </form>
                
