--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
                     </div>
                     <div class="portfolio-text">
                         <h2>Divvy Bike Case Study</h2>
-                        <p>In this case study, I performed many real-world tasks of a data analyst. I worked for a company, Cyclistic, and met different team members. In order to
+                        <p>In this case study, I performed many real-world tasks of a data analyst. I worked for a company,and met different team members. In order to
 			    answer the key business questions, I followed the steps of the data analysis process: ask, prepare, process, analyze,
-                             share, and act. </p>
+                             share, and act. https://github.com/mars2216/DivvyBikeCaseStudy/blob/main/README.md </p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
