--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 <div class="blogs">
                     <a href="#">
                     <div class="img">
-                        <img src="images/post-three.jpg" alt="blog-three">
+                        <img src="why-it-makes-sense-for-your-business-to-have-an-online-presence.jpg" alt="blog-three">
                         <div class="blog-date">30 Oct,19</div>
                     </div>
                     <div class="blog-text">
