--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
              
                 <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
-                        <img src="Coursera HMU6MX67PNFQ-1.png" alt="portfolio-third">
+                        <img src="Coursera HMU6MX67PNFQ-1.png" alt="Coursera HMU6MX67PNFQ-1">
                     </div>
                     <div class="portfolio-text">
                         <h2>Divvy Bike Case Study</h2>
